--- a/templates/front.html
+++ b/templates/front.html
@@ -15,8 +15,8 @@
    </style>
 </head>
 <body>
-    <form>
-        <div class="form-row">
+    <form action="/uploadImages" method="POST" enctype="multipart/form-data">
+      <!--   <div class="form-row">
           <div class="form-group col-md-6">
             <label for="inputEmail4">Email</label>
             <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
@@ -58,12 +58,17 @@
               Check me out
             </label>
           </div>
-        </div>
+        </div> -->
         <div class="form-group">
-          <label for="exampleFormControlFile1">Example file input</label>
-          <input type="file" class="form-control-file" id="exampleFormControlFile1">
+          <h5 for="exampleFormControlFile1"> Example file input</h5><br/>
+          <div class="custom-file">
+          <input type="file" class="custom-file-input" id="exampleFormControlFile1" name="image">
+          <label class="custom-file-label" for="image">Select image</label>
         </div>
-        <button type="submit" class="btn btn-primary">Sign in</button>
+
+          
+        </div>
+        <button type="submit" class="btn btn-primary">Upload Image</button>
       </form> 
 </body>
 </html>
