--- a/templates/front.html
+++ b/templates/front.html
@@ -33,25 +33,42 @@
           <input type="number" class="form-control" id="inputAddress" placeholder="Age">
         </div>
         <div class="form-group">
-          <label for="inputAddress2">Address 2</label>
-          <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+          <label for="inputAddress2">city </label>
+          <input type="text" class="form-control" id="inputAddress2" placeholder="city">
         </div>
         <div class="form-row">
           <div class="form-group col-md-6">
-            <label for="inputCity">City</label>
+            <label for="inputCity">Income</label>
             <input type="text" class="form-control" id="inputCity">
           </div>
-          <div class="form-group col-md-4">
-            <label for="inputState">State</label>
+          <div class="form-group col-md-3">
+            <label for="inputState">Maritel Status</label>
             <select id="inputState" class="form-control">
               <option selected>Choose...</option>
-              <option>...</option>
+              <option>Single</option>
+              <option>Married</option>
             </select>
           </div>
-          <div class="form-group col-md-2">
-            <label for="inputZip">Zip</label>
-            <input type="text" class="form-control" id="inputZip">
+          <div class="form-group col-md-3">
+            <label for="inputState">Have kids ?</label>
+            <select id="inputState" class="form-control">
+             
+              <option>yes</option>
+              <option>no</option>
+            </select>
           </div>
+        </div>
+        <div class="form-group">
+          <label for="inputAddress2">Religion </label>
+          <select id="inputState" class="form-control">
+             
+            <option>Buddhism</option>
+            <option>Hindusm</option>
+            <option>Muslim</option>
+            <option>Catholic</option>
+            <option>Other</option>
+            
+          </select>
         </div>
         <div class="form-group">
           <div class="form-check">
